--- a/project.css
+++ b/project.css
@@ -169,7 +169,7 @@ p {
 }
 .cards {
   width: 400px;
-  height: 400px;
+  height: 450px;
   background-color: #fff;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
@@ -217,3 +217,100 @@ p {
   justify-content: space-around;
   align-items: center;
 }
+
+.mt {
+  margin-top: 10rem;
+}
+
+.white {
+  background-color: white;
+}
+
+.mt-5 {
+  margin-top: 0.5rem;
+}
+
+.pb-5 {
+  padding-bottom: 10rem;
+}
+
+.invention {
+  margin-left: 9rem;
+  padding-bottom: 2rem;
+  height: 60vh;
+}
+.invention h1 {
+  font-size: 64px;
+}
+.invention p {
+  width: 40%;
+  margin-top: 20px;
+}
+
+.invention-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.invention-features {
+  float: right;
+}
+.invention-features h1 {
+  font-size: 35px;
+}
+
+.invention-about {
+  margin: -18rem -10rem 0 -10rem;
+  background-color: #f7f7f9;
+  padding: 10px;
+  width: 100%;
+  height: 10%;
+  display: flex;
+  align-items: center;
+}
+
+.invention-texts {
+  display: flex;
+  flex-direction: column;
+}
+
+.invention-2 {
+  margin-top: 100rem;
+}
+.invention-logo {
+  float: left;
+  /* border-radius: 5rem;
+  background-color: #fff;
+  padding: 40px;
+  font-size: 40px; */
+  margin-right: 3rem;
+}
+
+.invention-logo i {
+  /* float: left; */
+  border-radius: 5rem;
+  background-color: #fff;
+  padding: 40px;
+  font-size: 40px;
+  color: #ff7800;
+  /* margin-right: 3rem; */
+}
+
+.invention-two {
+  margin-top: 20rem;
+}
+
+/* .invention-about :hover {
+  color: white;
+  background-color: #ff7800;
+  cursor: pointer;
+  transition: 300ms all;
+} */
+
+/* .invention-logo i:hover {
+  color: white;
+  background-color: #ff7800;
+  cursor: pointer;
+  transition: 300ms all ease-in-out;
+} */
